Apply /index layout to appropriate part of /404, and clean up responsive layout of both

--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -93,9 +93,9 @@ main {
 	min-height: 100vh;
     max-width: var(--GW-body-max-width);
     margin: 0 auto;
-    padding: 1rem 
-    		 var(--GW-body-side-padding) 
-    		 1.25rem 
+    padding: 1rem
+    		 var(--GW-body-side-padding)
+    		 1.25rem
     		 var(--GW-body-side-padding);
 	display: flex;
 	flex-flow: column;
@@ -103,9 +103,9 @@ main {
 @media all and (max-width: 649px) {
 	main {
 		overflow: hidden;
-		padding: 1rem 
-				 var(--GW-body-side-padding) 
-				 4.25rem 
+		padding: 1rem
+				 var(--GW-body-side-padding)
+				 4.25rem
 				 var(--GW-body-side-padding);
 	}
 }
@@ -1902,7 +1902,7 @@ a code {
 }
 
 /*  Inline SVG icons.
-    (These need to be in `initial.css` because some of them are used in the 
+    (These need to be in `initial.css` because some of them are used in the
      opening paragraphs of /index.)
  */
 .inline-icon {
@@ -2263,39 +2263,26 @@ body.page-index #markdownBody #notable {
     display: none;
 }
 @media all and (min-width: 961px) {
-    body.page-index #markdownBody {
+    body.page-index #markdownBody,
+    body.page-404 div#new-popular-notable {
         display: grid;
+		grid-template-columns: 1fr 1fr;
         grid-row-gap: 0.5em;
-    }
-    @media all and (max-width: 1040px) {
-        body.page-index #markdownBody {
-            grid-template-columns: 1fr;
-        }
-        body.page-index #markdownBody section > ul {
-            column-count: 2;
-            column-gap: 3em;
-        }
-        body.page-index #markdownBody section > ul li {
-            break-inside: avoid;
-        }
-    }
-    @media all and (min-width: 1041px) {
-        body.page-index #markdownBody {
-            grid-template-columns: 1fr 1fr;
-            grid-column-gap: 2em;
-        }
-        body.page-index #markdownBody .abstract,
-        body.page-index #markdownBody hr {
-            grid-column-start: 1;
-            grid-column-end: -1;
-        }
-    }
+		grid-column-gap: 2em;
+	}
+	body.page-index #markdownBody .abstract,
+	body.page-index #markdownBody hr,
+	body.page-404 div#new-popular-notable hr {
+		grid-column-start: 1;
+		grid-column-end: -1;
+	}
     /*  On sufficiently-wide screens, we can get 3 columns in nicely; to preserve
         the initial row being ‘meta’ blocks, we leave #notable visible
         (for a newest/popular/notable triplet)
      */
     @media all and (min-width: 1761px) {
-        body.page-index #markdownBody {
+        body.page-index #markdownBody,
+	    body.page-404 div#new-popular-notable {
             grid-template-columns: 45ch 45ch 45ch;
             margin-left: -20ch;
         }
@@ -2308,6 +2295,9 @@ body.page-index #markdownBody #notable {
         }
         body.page-index #markdownBody hr {
             margin-left: -5ch;
+        }
+	    body.page-404 div#new-popular-notable hr {
+            margin-left: -13.5ch;
         }
     }
 }
@@ -2367,8 +2357,9 @@ body.page-index #markdownBody section ul ul {
     are unnecessary given the flowing columns; for mobile users, we’ll separate
     sections by rulers because they only get a single very long column to scroll
     through, which lacks a sense of hierarchy/chunking. However, desktop users
-    still get the initial <hr> inserted by sed to divide the two blocks of
-    New/Popular/Notable from all-topics sections (which has no class set on it).
+    still get the initial `<hr class="horizontal-rule-nth-1">` inserted by sed
+    to divide the two blocks of 'New'/'Popular'/'Notable' from all-topics sections
+    (which has no class set on it).
  */
 @media all and (min-width: 650px) {
 	/*  Horizontal ruler on the home page.
