--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -2073,6 +2073,10 @@ span.date-range {
     white-space: nowrap;
     font-variant-numeric: oldstyle-nums;
 }
+/* Unless in a link, for the usual reasons: */
+a span.date-range {
+    font-variant-numeric: tabular-nums;
+}
 span.date-range .subsup {
     align-items: center;
     bottom: 0;
@@ -2283,7 +2287,7 @@ body.page-index #markdownBody #notable {
 		}
 		body.page-404 div#new-popular-notable .columns ul {
 			column-gap: 2em;
-		}	
+		}
 	}
     /*  On sufficiently-wide screens, we can get 3 columns in nicely; to preserve
         the initial row being ‘meta’ blocks, we leave #notable visible
