--- a/template/unfortunatelytheclockisticking.html
+++ b/template/unfortunatelytheclockisticking.html
@@ -1,36 +1,23 @@
-<div class="display-random-one">
 
-  <div class="display-entry">
-    <figure>
-      <img src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-1" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [**I Understand** | remain ignorant]" title="Unfortunately, the clock is ticking…">
-      <map name="image-map-1">
-        <area alt="I understand" title="I understand" href="/archiving" coords="98,596,221,664" shape="rect">
-        <area alt="remain ignorant" title="remain ignorant" href="/404" coords="225,595,358,661" shape="rect">
-        <area alt="close page" title="close page" href="/index" coords="345,508,39" shape="circle">
-      </map>
-    </figure>
-  </div>
+<figure>
+  <img src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-1" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [**I Understand** | remain ignorant]" title="Unfortunately, the clock is ticking…">
+  <map name="image-map-1">
 
-  <div class="display-entry">
-    <figure>
-      <img src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-2" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [**I Understand** | remain ignorant]" title="Unfortunately, the clock is ticking…">
-      <map name="image-map-2">
-        <area alt="I understand" title="I understand" href="/search" coords="98,596,221,664" shape="rect">
-        <area alt="remain ignorant" title="remain ignorant" href="https://tinyurl.com/hquv34" coords="225,595,358,661" shape="rect"> <!-- Rickroll -->
-        <area alt="close page" title="close page" href="/404" coords="345,508,39" shape="circle">
-      </map>
-    </figure>
-  </div>
+    <div class="display-random-one disable-the-not-chosen">
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/archiving"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/search"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/doc/index"></div>
+    </div>
 
-  <div class="display-entry">
-    <figure>
-      <img src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-3" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [**I Understand** | remain ignorant]" title="Unfortunately, the clock is ticking…">
-      <map name="image-map-3">
-        <area alt="I understand" title="I understand" href="/doc/index" coords="98,596,221,664" shape="rect">
-        <area alt="remain ignorant" title="remain ignorant" href="https://www.youtube.com/watch?v=SMhwddNQSWQ" coords="225,595,358,661" shape="rect"> <!-- "Dare To Be Stupid", Weird Al Yankovic -->
-        <area alt="close page" title="close page" href="/404" coords="345,508,39" shape="circle">
-      </map>
-    </figure>
-  </div>
+    <div class="display-random-one disable-the-not-chosen">
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="/404"></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://tinyurl.com/hquv34"> <!-- Rickroll --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=SMhwddNQSWQ"> <!-- "Dare To Be Stupid", Weird Al Yankovic --></div>
+    </div>
 
-</div> <!-- close div.display-random-one -->
+    <div class="display-random-one disable-the-not-chosen">
+      <div class="display-entry"><area alt="close page" title="close page" coords="345,508,39" shape="circle" href="/index"></div>
+      <div class="display-entry"><area alt="close page" title="close page" coords="345,508,39" shape="circle" href="/404"></div>
+    </div>
+  </map>
+</figure>
