Birthday Cat: annotate the rest of the image-map - the more the merrier, after all, and the JS refactoring means it's easy to modify the 'base' imagemap now

--- a/template/unfortunatelytheclockisticking.html
+++ b/template/unfortunatelytheclockisticking.html
@@ -2,6 +2,19 @@
 <figure>
   <img src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-1" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [**I Understand** | remain ignorant]" title="Unfortunately, the clock is ticking…">
   <map name="image-map-1">
+    <area href="/review/cat#are-cats-domesticated" alt="Cat emotional issues &amp; stress" coords="195,334,164" shape="circle">
+    <area href="https://gwern.net/doc/psychology/cognitive-bias/illusion-of-depth/index" alt="The illusion of depth" coords="151,597,26,580" shape="rect">
+    <area href="https://gwern.net/sunk-cost" alt="Sunk costs" coords="283,546,336,567" shape="rect">
+    <area href="https://en.wikipedia.org/wiki/Clock_of_the_Long_Now" alt="Clock of the Long Now" coords="259,526,123,501" shape="rect">
+    <area href="https://en.wikipedia.org/wiki/Zippy_the_Pinhead" alt="Cone-heads" coords="176,166,262,181,204,0,187,0" shape="poly">
+    <area href="/changelog" alt="Site change history" coords="170,527,334,546" shape="rect">
+    <area href="https://edoras.sdsu.edu/~vinge/misc/singularity.html" alt="The Coming Technological Singularity: How to Survive in the Post-Human Era" coords="19,544,122,562" shape="rect">
+    <area href="https://knowyourmeme.com/memes/unfortunately-the-clock-is-ticking" alt="KYM:  Unfortunately, the Clock Is Ticking copypasta" coords="22,500,123,527" shape="rect">
+    <area href="https://en.wikipedia.org/wiki/Do_not_go_gentle_into_that_good_night" alt="Do not go gentle into that good night" coords="385,405,80" shape="circle">
+    <area href="https://gwern.net/subscript#date-ranges" alt="The Big Now" coords="18,527,174,547" shape="rect">
+    <area href="https://waitbutwhy.com/2014/05/life-weeks.html" alt="Your Life in Weeks" coords="280,562,126,548" shape="rect">
+    <area href="/screwfly" alt="‘Screwfly Solution’ on lordosis" coords="18,563,93,576" shape="rect">
+    <area href="https://elgoog.im/space-invaders/" alt="Space Invaders (Google Easter Egg)" coords="477,46,507,0" shape="rect">
 
     <div class="display-random-one disable-the-not-chosen">
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/archiving"></div>
