Birthday Cat: fill out more alternative links, both serious & humorous

--- a/template/unfortunatelytheclockisticking.html
+++ b/template/unfortunatelytheclockisticking.html
@@ -1,4 +1,3 @@
-
 <figure>
   <img src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-1" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [**I Understand** | remain ignorant]" title="Unfortunately, the clock is ticking…">
   <map name="image-map-1">
@@ -20,12 +19,37 @@
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/archiving"></div>
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/search"></div>
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/doc/index"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://en.wikisource.org/wiki/Dhammapada_(Muller)"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/subculture"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://slatestarcodex.com/2014/07/30/meditations-on-moloch/"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://waitbutwhy.com/2015/12/the-tail-end.html"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/doc/science/1986-hamming"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/doc/science/1986-hamming"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://fs.blog/david-foster-wallace-this-is-water/"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href=""></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://www.youtube.com/watch?v=ji5_MqicxSo"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://kev.town/2013/04/30/why-did-why-the-lucky-stiff-quit/"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://paulgraham.com/vb.html"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://harpers.org/archive/1932/10/in-praise-of-idleness/"></div>
+      <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://en.wikisource.org/wiki/On_the_shortness_of_life/Chapter_I"></div>
     </div>
 
     <div class="display-random-one disable-the-not-chosen">
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="/404"></div>
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://tinyurl.com/hquv34"> <!-- Rickroll --></div>
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=SMhwddNQSWQ"> <!-- "Dare To Be Stupid", Weird Al Yankovic --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=qItugh-fFgg"> <!-- All Your Base --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://neal.fun/stimulation-clicker/"> <!-- Stimulation Clicker --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.nyan.cat/"> <!-- Nyan Cat --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="http://www.zombo.com/"> <!-- Zombo.com --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://originalhampster.ytmnd.com/"> <!-- The Hampsterdance --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://badgerbadgerbadger.com/"> <!-- Badger Badger Badger --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://yourethemannowdog.ytmnd.com/"> <!-- You're The Man Now Dog --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=ZZ5LpwO-An4"> <!-- He-Man Sings (What's Going On?) --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=tfy1ffrftoE"> <!-- Salad Fingers --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=oavMtUWDBTM"> <!-- Trololo Song --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=k85mRPqvMbE"> <!-- Crazy Frog – Axel F --></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=2GF3rWj0A_Y"> <!-- Dancing Baby (Oogachaka) --></div>
     </div>
 
     <div class="display-random-one disable-the-not-chosen">
