--- a/template/unfortunatelytheclockisticking.html
+++ b/template/unfortunatelytheclockisticking.html
@@ -16,7 +16,7 @@
     <area href="https://elgoog.im/space-invaders/" alt="Space Invaders (Google Easter Egg)" coords="477,46,507,0" shape="rect">
     <area alt="It Was All For The Tuna" title="It Was All For The Tuna" href="https://cosmicadventuresquad.itch.io/it-was-all-for-the-tuna" coords="417,548,412,579,362,589,357,621,494,648,475,605,461,566" shape="poly">
 
-    <div class="display-random-one disable-the-not-chosen">
+    <div class="display-random-1 disable-the-not-chosen">
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/archiving"></div>
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/search"></div>
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="/doc/index"></div>
@@ -33,7 +33,7 @@
       <div class="display-entry"><area alt="I understand" title="I understand" coords="98,596,221,664" shape="rect" href="https://en.wikisource.org/wiki/On_the_shortness_of_life/Chapter_I"></div>
     </div>
 
-    <div class="display-random-one disable-the-not-chosen">
+    <div class="display-random-1 disable-the-not-chosen">
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="/404"></div>
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://tinyurl.com/hquv34"> <!-- Rickroll --></div>
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=SMhwddNQSWQ"> <!-- "Dare To Be Stupid", Weird Al Yankovic --></div>
@@ -51,7 +51,7 @@
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=2GF3rWj0A_Y"> <!-- Dancing Baby (Oogachaka) --></div>
     </div>
 
-    <div class="display-random-one disable-the-not-chosen">
+    <div class="display-random-1 disable-the-not-chosen">
       <div class="display-entry"><area alt="close page" title="close page" coords="345,508,39" shape="circle" href="/index"></div>
       <div class="display-entry"><area alt="close page" title="close page" coords="345,508,39" shape="circle" href="/404"></div>
     </div>
