--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -5193,6 +5193,12 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     border-bottom: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
+/*	Partial annotations appended to non-annotation pop-frames.
+ */
+.popframe .partial-annotation-append-container .annotation-partial {
+	font-size: 0.9em;
+}
+
 /*┌──────────────────────┐*/
 /*│ Footnote pop-frames. │*/
 /*└──────────────────────┘*/
