--- a/css/fonts-VERSIONED.css
+++ b/css/fonts-VERSIONED.css
@@ -101,105 +101,121 @@
 	unicode-range: U+0020-007E, U+00A0-00BF, U+00C6, U+00D0, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02DD, U+0300-030C, U+0391-03A9, U+03B1-03C9, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+25A0-25C9, U+2752;
 }
 
-/*******************/
-/* SOURCE SANS PRO */
-/*******************/
+/*****************/
+/* SOURCE SANS 3 */
+/*****************/
 
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 200;
 	font-style: normal;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-ExtraLight.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-ExtraLight.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 200;
 	font-style: italic;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-ExtraLightItalic.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-ExtraLightItalic.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 300;
 	font-style: normal;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-Light.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-Light.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 300;
 	font-style: italic;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-LightItalic.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-LightItalic.otf?v=1742304942') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 400;
 	font-style: normal;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-Regular.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-Regular.otf?v=1742304942') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 400;
 	font-style: italic;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-RegularItalic.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-RegularItalic.otf?v=1742304942') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
+	font-weight: 500;
+	font-style: normal;
+	src: url('/static/font/ss3/SourceSans3-BASIC-Medium.otf?v=1742304942') format('opentype');
+	font-display: swap;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
+}
+@font-face {
+	font-family: 'Source Sans 3';
+	font-weight: 500;
+	font-style: italic;
+	src: url('/static/font/ss3/SourceSans3-BASIC-MediumItalic.otf?v=1742304942') format('opentype');
+	font-display: swap;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
+}
+@font-face {
+	font-family: 'Source Sans 3';
 	font-weight: 600;
 	font-style: normal;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-Semibold.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-Semibold.otf?v=1742304942') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 600;
 	font-style: italic;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-SemiboldItalic.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-SemiboldItalic.otf?v=1742304942') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 700;
 	font-style: normal;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-Bold.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-Bold.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 700;
 	font-style: italic;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-BoldItalic.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-BoldItalic.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 900;
 	font-style: normal;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-Black.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-Black.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 @font-face {
-	font-family: 'Source Sans Pro';
+	font-family: 'Source Sans 3';
 	font-weight: 900;
 	font-style: italic;
-	src: url('/static/font/ssp/SourceSansPro-BASIC-BlackItalic.ttf?v=1734481578') format('truetype');
+	src: url('/static/font/ss3/SourceSans3-BASIC-BlackItalic.otf?v=1742304941') format('opentype');
 	font-display: swap;
-	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
+	unicode-range: U+0020-00BF, U+00C6, U+00D7, U+00D8, U+00DE, U+00DF, U+00E6, U+00F0, U+00F7, U+00F8, U+00FE, U+0152, U+0153, U+017F, U+018F, U+0192, U+0259, U+02C6-02CC, U+02D8-02DD, U+0300-030C, U+2002-2049, U+2190-2199, U+2212, U+2215, U+221E, U+2248, U+2260, U+2264-2265, U+2318, U+2325, U+2326, U+232B, U+25A0-25E6, U+2610, U+263C, U+263F-2642, U+2660, U+2663, U+2665, U+2666, U+2752, U+275B-2760, U+2E3A, U+2E3B;
 }
 
 /*****************/
