--- a/css/default.css
+++ b/css/default.css
@@ -1959,6 +1959,11 @@ pre {
     cursor: text;
     max-height: calc(100vh - 8rem);
 }
+@media all and (hover: hover) {
+	pre {
+		overscroll-behavior: none;
+	}
+}
 pre code {
     display: block;
     margin: 0;
